--- a/index.html
+++ b/index.html
@@ -26,21 +26,26 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">Bhavani Viswanathan</h1>
-                <p class="hero-subtitle">Frontend Developer</p>
-                <p class="hero-description">Building scalable web applications with React.js, modern JavaScript, and responsive design principles</p>
-                <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                    <a href="#experience" class="btn btn-secondary">View My Work</a>
+            <div class="hero-wrapper">
+                <div class="hero-image">
+                    <img src="my-profile.jpg" alt="Bhavani Viswanathan">
                 </div>
-                <div class="hero-contact">
-                    <a href="tel:+919345380251" class="contact-link">
-                        <i class="fas fa-phone"></i> +91 93453 80251
-                    </a>
-                    <a href="mailto:bhavaniviswanathan97@gmail.com" class="contact-link">
-                        <i class="fas fa-envelope"></i> bhavaniviswanathan97@gmail.com
-                    </a>
+                <div class="hero-content">
+                    <h1 class="hero-title">Bhavani Viswanathan</h1>
+                    <p class="hero-subtitle">Frontend Developer</p>
+                    <p class="hero-description">Building scalable web applications with React.js, modern JavaScript, and responsive design principles</p>
+                    <div class="hero-buttons">
+                        <a href="#contact" class="btn btn-primary">Get In Touch</a>
+                        <a href="#experience" class="btn btn-secondary">View My Work</a>
+                    </div>
+                    <div class="hero-contact">
+                        <a href="tel:+919345380251" class="contact-link">
+                            <i class="fas fa-phone"></i> +91 93453 80251
+                        </a>
+                        <a href="mailto:bhavaniviswanathan97@gmail.com" class="contact-link">
+                            <i class="fas fa-envelope"></i> bhavaniviswanathan97@gmail.com
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
